[project]
name = "maritime-env"
version = "0.1.0"
description = "Maritime Environment Simulation API"
requires-python = ">=3.10"

dependencies = [
    "flask==3.0.3",
    "flask-socketio==5.3.6",
    "eventlet==0.36.1",
    "requests==2.31.0",
    "pydantic==2.7.1",
    "numpy==1.26.4",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"